--- a/FinPlan.Web/Components/App.razor
+++ b/FinPlan.Web/Components/App.razor
@@ -45,6 +45,8 @@
     <script src="js/excelExport.js"></script>
     <script src="js/cookieHandlerExtension.js"></script>
     <script src="js/adLoader.js"></script>
+    <script src="js/simpleAdInit.js"></script>
+    <script src="js/browserInfo.js"></script>
 </body>
 
 </html>
