--- a/FinPlan.Web/Pages/Feedback/RetirementSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/RetirementSurvey.razor
@@ -99,7 +99,7 @@ new SurveyQuestion("Are there any columns or data you wish were included or excl
                 var client = HttpCustomClientService.CreateRetryClient(HttpClientFactory);
                 var route = Navigation.ToBaseRelativePath(Navigation.Uri);
                 string? ua = null;
-                try { ua = await JSRuntime.InvokeAsync<string>("eval", "navigator.userAgent"); } catch { }
+                try { ua = await JSRuntime.InvokeAsync<string>("fpBrowserInfo.getUserAgent"); } catch { }
                 var dto = new { Page = "Survey-Retire", Route = route, UserGuid = userGuid, UserAgent = ua };
                 var json = System.Text.Json.JsonSerializer.Serialize(dto);
                 using var content = new StringContent(json, System.Text.Encoding.UTF8, "application/json");
