--- a/FinPlan.Web/Components/Pages/home.razor
+++ b/FinPlan.Web/Components/Pages/home.razor
@@ -47,8 +47,6 @@
         }
         catch { }
     }
-
-
 }
 
 <!-- Professional Financial Header -->
@@ -62,11 +60,14 @@
     </div>
 </div>
 
+<!-- Ad Placement 1: Below Header (Primary Position) -->
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-            <AdUnit Slot="home_bottom_responsive"
+            <AdUnit Slot="3753199327"
                     Style="display:block; min-height: 120px;"
+                    Format="auto"
+                    Responsive="true"
                     PlaceholderText="Advertisement"></AdUnit>
         </div>
     </div>
@@ -332,6 +333,17 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            
+            <!-- Ad Placement 2: Bottom of Page (Secondary Position) -->
+            <div class="row mt-5 mb-4">
+                <div class="col-lg-8 mx-auto text-center">
+                    <AdUnit Slot="2823616254"
+                            Style="display:block; min-height: 120px;"
+                            Format="auto"
+                            Responsive="true"
+                            PlaceholderText="Advertisement"></AdUnit>
                 </div>
             </div>
         </div>
