--- a/FinPlan.Web/Pages/Savings/Savings.razor
+++ b/FinPlan.Web/Pages/Savings/Savings.razor
@@ -10,6 +10,7 @@
 @using FinPlan.Web.Pages.Savings.Components
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
+@using FinPlan.Web.Components.Shared
 
 
 @inject IJSRuntime JSRuntime
